// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Temporal.PlainYearMonth > crossSerialize > scoped > supports Temporal.PlainYearMonth 1`] = `"($R=>$R[0]=Temporal.PlainYearMonth.from("2025-05"))($R["example"])"`;

exports[`Temporal.PlainYearMonth > crossSerialize > supports Temporal.PlainYearMonth 1`] = `"$R[0]=Temporal.PlainYearMonth.from("2025-05")"`;

exports[`Temporal.PlainYearMonth > crossSerializeAsync > scoped > supports Temporal.PlainYearMonth 1`] = `"($R=>$R[0]=Promise.resolve($R[1]=Temporal.PlainYearMonth.from("2025-05")))($R["example"])"`;

exports[`Temporal.PlainYearMonth > crossSerializeAsync > supports Temporal.PlainYearMonth 1`] = `"$R[0]=Promise.resolve($R[1]=Temporal.PlainYearMonth.from("2025-05"))"`;

exports[`Temporal.PlainYearMonth > crossSerializeStream > scoped > supports Temporal.PlainYearMonth 1`] = `
"($R=>$R[0]=($R[1]=($R[2]=() => {
  const resolver = {
    p: 0,
    s: 0,
    f: 0
  };
  resolver.p = new Promise((resolve, reject) => {
    resolver.s = resolve;
    resolver.f = reject;
  });
  return resolver;
})()).p)($R["example"])"
`;

exports[`Temporal.PlainYearMonth > crossSerializeStream > scoped > supports Temporal.PlainYearMonth 2`] = `
"($R=>($R[4]=(resolver, data) => {
  resolver.s(data);
  resolver.p.s = 1;
  resolver.p.v = data;
})($R[1],$R[3]=Temporal.PlainYearMonth.from("2025-05")))($R["example"])"
`;

exports[`Temporal.PlainYearMonth > crossSerializeStream > supports Temporal.PlainYearMonth 1`] = `
"$R[0]=($R[1]=($R[2]=() => {
  const resolver = {
    p: 0,
    s: 0,
    f: 0
  };
  resolver.p = new Promise((resolve, reject) => {
    resolver.s = resolve;
    resolver.f = reject;
  });
  return resolver;
})()).p"
`;

exports[`Temporal.PlainYearMonth > crossSerializeStream > supports Temporal.PlainYearMonth 2`] = `
"($R[4]=(resolver, data) => {
  resolver.s(data);
  resolver.p.s = 1;
  resolver.p.v = data;
})($R[1],$R[3]=Temporal.PlainYearMonth.from("2025-05"))"
`;

exports[`Temporal.PlainYearMonth > serialize > supports Temporal.PlainYearMonth 1`] = `"Temporal.PlainYearMonth.from("2025-05")"`;

exports[`Temporal.PlainYearMonth > serializeAsync > supports Temporal.PlainYearMonth 1`] = `"Promise.resolve(Temporal.PlainYearMonth.from("2025-05"))"`;

exports[`Temporal.PlainYearMonth > toCrossJSON > supports Temporal.PlainYearMonth 1`] = `"{"t":36,"i":0,"s":"2025-05","c":6}"`;

exports[`Temporal.PlainYearMonth > toCrossJSONAsync > supports Temporal.PlainYearMonth 1`] = `"{"t":12,"i":0,"s":1,"f":{"t":36,"i":1,"s":"2025-05","c":6}}"`;

exports[`Temporal.PlainYearMonth > toCrossJSONStream > supports Temporal.PlainYearMonth 1`] = `"{"t":22,"i":0,"s":1,"f":{"t":26,"i":2,"s":1}}"`;

exports[`Temporal.PlainYearMonth > toCrossJSONStream > supports Temporal.PlainYearMonth 2`] = `"{"t":23,"i":1,"a":[{"t":26,"i":4,"s":2},{"t":36,"i":3,"s":"2025-05","c":6}]}"`;

exports[`Temporal.PlainYearMonth > toJSON > supports Temporal.PlainYearMonth 1`] = `"{"t":{"t":36,"i":0,"s":"2025-05","c":6},"f":127,"m":[]}"`;

exports[`Temporal.PlainYearMonth > toJSONAsync > supports Temporal.PlainYearMonth 1`] = `"{"t":{"t":12,"i":0,"s":1,"f":{"t":36,"i":1,"s":"2025-05","c":6}},"f":127,"m":[]}"`;
